Changed theme and put initial slides

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/blood.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +24,20 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+
+					<h3>Intro to Visual Thinking</h3> with Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
+			<br>
+			<a href="http://tomlinson.org/resume">More on me and my work</a>
+				</section>
+				<section>
+
+					<h3>Get Ready!</h3>
+					<p>Visit <br><a href ="http://lisawilliams.github.io/visual-thinking/">
+						http://lisawilliams.github.io/visual-thinking</a></p>
+						<p>This is where you will find all the links and resources for today's talk.</p>
+
+				</section>
 			</div>
 		</div>
 
