adding wrapup section slides

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Visual Thinking</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/blood.css">
@@ -38,6 +38,32 @@
 						<p>This is where you will find all the links and resources for today's talk.</p>
 
 				</section>
+
+<!-- End Section Slides -->
+				<section>
+								<h3> Q&A</h3>
+							</section>
+							<section>
+								<h3>Thanks</h3>
+							</section>
+							<section>
+							<section>
+								<h3> Questions?</h3> Reach Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
+								<br>
+								<a href="http://tomlinson.org/resume">More on me and my work</a><br>
+								<a href="http://lisawilliams.github.io/email">http://lisawilliams.github.io/email</a>
+							</section>
+							<section>
+				<h3>How this presentation was made </h3>
+				This presentation was made using Reveal.js, a framework for making HTML slide presentations; Reveal.js is a Node.js application.
+				For more details, visit the repository for this application at <a href ="https://github.com/lisawilliams/visual-thinking">https://github.com/lisawilliams/visual-thinking</a><br>
+				You can always find this presentation and its resources at <a href="http://lisawilliams.github.io/visual-thinking">http://lisawilliams.github.io/visual-thinking</a>
+
+							</section>
+						</section>
+
+
+
 			</div>
 		</div>
 
