adding presentation structure

--- a/index.html
+++ b/index.html
@@ -39,6 +39,49 @@
 
 				</section>
 
+				<section>
+					<h3>A Brief History Of Data Visualization</h3>
+				</section>
+
+				<section>
+					<section>
+
+					<h3>Hands-On: Scraping Data</h3>
+					</section>
+					<section>
+						<H4>Instructions and Data Files</H4>
+						Instructions and data files for the hands-on portion of this talk
+						can be found here: <br>
+						<a href ="https://lisawilliams.github.io/lisa/tech/2018/03/14/scrape-to-map-tableau-tutorial.html">https://lisawilliams.github.io/lisa/tech/2018/03/14/scrape-to-map-tableau-tutorial.html</a>
+					</section>
+					</section>
+				</section>
+
+				<section>
+					<h3>Thinking Visually</h3>
+				</section>
+
+				<section>
+					<section>
+
+					<h3>Hands-On: From Scrape to Map</h3>
+					</section>
+					<section>
+						<H4>Instructions and Data Files</H4>
+						Instructions and data files for the hands-on portion of this talk
+						can be found here: <br>
+						<a href ="https://lisawilliams.github.io/lisa/tech/2018/03/14/scrape-to-map-tableau-tutorial.html">https://lisawilliams.github.io/lisa/tech/2018/03/14/scrape-to-map-tableau-tutorial.html</a>
+					</section>
+					</section>
+				</section>
+
+				<section>
+					<h3>Charts On The Dark Side</h3>
+					<p>How To Spot Manipulative and Deceptive Charts and Graphs</p>
+				</section>
+
+
+
 <!-- End Section Slides -->
 				<section>
 								<h3> Q&A</h3>
