adding slides and additional images

--- a/index.html
+++ b/index.html
@@ -31,22 +31,67 @@
 			<a href="http://tomlinson.org/resume">More on me and my work</a>
 				</section>
 				<section>
-
+				<section>
 					<h3>Get Ready!</h3>
 					<p>Visit <br><a href ="http://lisawilliams.github.io/visual-thinking/">
 						http://lisawilliams.github.io/visual-thinking</a></p>
 						<p>This is where you will find all the links and resources for today's talk.</p>
-
 				</section>
 
+<section>
+	<h3>Download Tableau</h3>
+	<p>If you haven't done so already, download Tableau.</p>
+	If you have an .edu address: <a href ="http://tableau.com/academic/students">tableau.com/academic/students</a><br>
+	If you don't have an .edu address, the free trial is here: <a href="https://www.tableau.com/products/desktop/download">https://www.tableau.com/products/desktop/download</a>
+
+</section>
+</section>
+
+<section>
 				<section>
 					<h3>A Brief History Of Data Visualization</h3>
 				</section>
 
+<section>
+	<img src = "/images/cuneiform-tablet.png">
+</section>
+
+	<section>
+		<img src = "/images/roundmap.png">
+	</section>
+
+		<section>
+			<img src = "images/first-timeline.png">
+		</section>
+
+		<section>
+			<img src = "images/playfair-column-chart.png">
+		</section>
+
+		<section>
+			<img src = "images/playfair-pie-chart.png">
+		</section>
+
+		<section>
+			<img src = "images/coxcomb.png">
+		</section>
+
+		<section>
+			<img src = "images/3d-chart-1879.png">
+		</section>
+		<section>
+			<img src = "images/sketchpad-mit-1963.png">
+		</section>
+		<section>
+			<img src = "images/IBM-2250-1970.png">
+		</section>
+
+</section>
+
 				<section>
 					<section>
 
-					<h3>Hands-On: Scraping Data</h3>
+					<h3>Hands-On: <Br>Scraping Data</h3>
 					</section>
 					<section>
 						<H4>Instructions and Data Files</H4>
@@ -57,14 +102,82 @@
 					</section>
 				</section>
 
+
+<section>
 				<section>
 					<h3>Thinking Visually</h3>
 				</section>
 
 				<section>
+					<img src = "images/cleveland-chart.png">
+				</section>
+
+				<section>
+					<img src = "images/pie-chart-right.png">
+				</section>
+
+				<section>
+					<img src = "images/pie-chart-wrong.png">
+				</section>
+
+				<section>
+					<img src = "images/bar-chart-bad.png">
+				</section>
+
+				<section>
+					<img src = "images/bar-chart-good.png">
+				</section>
+
+				<section>
+					<img src = "images/too-many-lines.png">
+				</section>
+
+				<section>
+					<img src = "images/bar-chart-bad.png">
+				</section>
+
+				<section>
+					<img src = "images/bar-chart-grouping.png">
+				</section>
+
+				<section>
+					<img src = "images/sparklines.png">
+				</section>
+
+				<section>
+					<h3> Good Chart, Bad Chart</h3>
+				</section>
+
+				<section>
+					<img src = "images/cleveland-chart.png">
+				</section>
+
+				<section>
+					<img src = "images/bubble-chart.png">
+				</section>
+
+				<section>
+					<img src = "images/facebook-linechart.png">
+				</section>
+
+				<section>
+					<img src = "images/treemap.png">
+				</section>
+
+				<section>
+					<img src = "images/scatterplot.png">
+				</section>
+
+				<section>
+					<img src = "images/node-chart.png">
+				</section>
+
+
+</section>
+				<section>
 					<section>
 
-					<h3>Hands-On: From Scrape to Map</h3>
+					<h3>Hands-On: <br>From Scrape to Map</h3>
 					</section>
 					<section>
 						<H4>Instructions and Data Files</H4>
@@ -75,12 +188,59 @@
 					</section>
 				</section>
 
+<section>
 				<section>
 					<h3>Charts On The Dark Side</h3>
-					<p>How To Spot Manipulative and Deceptive Charts and Graphs</p>
+					<p>How To Spot <br>Manipulative and Deceptive <br>Charts and Graphs</p>
+				</section>
+
+				<section>
+					<img src = "images/nonzero-one.png">
+				</section>
+
+				<section>
+					<img src = "images/nonzero-two.png">
+				</section>
+
+				<section>
+					<img src = "images/scale-one.png">
+				</section>
+
+				<section>
+					<img src = "images/scale-two.png">
+				</section>
+
+				<section>
+					<img src = "images/fox-four.png">
+				</section>
+
+				<section>
+					<h3>Good Chart, Bad Chart</h3>
+				</section>
+
+				<section>
+					<img src = "images/fox-one.png">
+				</section>
+
+				<section>
+					<img src = "images/upside-down-axis.png">
+				</section>
+
+				<section>
+					<img src = "images/bad-arc-chart.png">
+				</section>
+
+				<section>
+					<img src = "images/75-million.png">
+				</section>
+
+				<section>
+					<img src = "images/pac-man.png">
 				</section>
 
 
+
+</section>
 
 <!-- End Section Slides -->
 				<section>
@@ -94,7 +254,7 @@
 								<h3> Questions?</h3> Reach Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
 								<br>
 								<a href="http://tomlinson.org/resume">More on me and my work</a><br>
-								<a href="http://lisawilliams.github.io/email">http://lisawilliams.github.io/email</a>
+								<a href="http://lisawilliams.github.io/visual-thinking">http://lisawilliams.github.io/visual-thinking</a>
 							</section>
 							<section>
 				<h3>How this presentation was made </h3>
