experimenting with approaches to rightsizing images

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<a href ="https://lisawilliams.github.io/lisa/tech/2018/03/14/scrape-to-map-tableau-tutorial.html">https://lisawilliams.github.io/lisa/tech/2018/03/14/scrape-to-map-tableau-tutorial.html</a>
 					</section>
 					</section>
-				</section>
+
 
 
 <section>
@@ -148,7 +148,7 @@
 					<h3> Good Chart, Bad Chart</h3>
 				</section>
 
-				<section>
+				<section class="img_container">
 					<img src = "images/cleveland-chart.png">
 				</section>
 
@@ -172,8 +172,9 @@
 					<img src = "images/node-chart.png">
 				</section>
 
-
 </section>
+
+
 				<section>
 					<section>
 
