fixing img class error

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					<h3> Good Chart, Bad Chart</h3>
 				</section>
 
-				<section class="img_container">
+				<section>
 					<img src = "images_rightsize/cleveland-chart.png">
 				</section>
 
