adding additional slides

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 	<img src = "images_rightsize/cuneiform-tablet.png">
 </section>
 
+<section>
+	<img src = "images_rightsize/treemap.png">
+</section>
+
+<section>
+	<img src = "images_rightsize/stonehenge.png">
+</section>
+
 	<section>
 		<img src = "images_rightsize/roundmap.png">
 	</section>
