adding dates to historical slides

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="slides">
 				<section>
 
-					<h3>Intro to Visual Thinking</h3> with Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
+					<h3>Intro to Visual Thinking<br>for Journalists</h3> with Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
 			<br>
 			<a href="http://tomlinson.org/resume">More on me and my work</a>
 				</section>
@@ -55,6 +55,7 @@
 				</section>
 
 <section>
+	<h6>3500 BCE</h6>
 	<img src = "images_rightsize/cuneiform-tablet.png">
 </section>
 
@@ -63,18 +64,22 @@
 </section>
 
 <section>
+		<h6>3100 BCE</h6>
 	<img src = "images_rightsize/stonehenge.png">
 </section>
 
 	<section>
+			<h6>500 BCE</h6>
 		<img src = "images_rightsize/roundmap.png">
 	</section>
 
 		<section>
+				<h6>1525 CE</h6>
 			<img src = "images_rightsize/first-timeline.png">
 		</section>
 
 		<section>
+				<h6>1821 BCE</h6>
 			<img src = "images_rightsize/playfair-column-chart.png">
 		</section>
 
@@ -83,16 +88,20 @@
 		</section>
 
 		<section>
+				<h6>1855 CE</h6>
 			<img src = "images_rightsize/coxcomb.png">
 		</section>
 
 		<section>
+				<h6>1875 CE</h6>
 			<img src = "images_rightsize/3d-chart-1879.png">
 		</section>
 		<section>
+				<h6>1963 CE</h6>
 			<img src = "images_rightsize/sketchpad-mit-1963.png">
 		</section>
 		<section>
+				<h6>1970 CE</h6>
 			<img src = "images_rightsize/IBM-2250-1970.png">
 		</section>
 
