--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Visual Thinking</title>
+		<title>Data Journalism Basics</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/blood.css">
@@ -28,15 +28,17 @@
 			<div class="slides">
 				<section>
 
-					<h3>Intro to Visual Thinking<br>for Journalists</h3> with Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
+					<h3>Data Journalism Basics</h3> with Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
 			<br>
-			<a href="http://tomlinson.org/resume">More on me and my work</a>
+			<a href="http://tomlinson.org/resume">More on me and my work</a><br>
+			Network: Netgear56-5G-1<br>
+			PWD: vastiris174<br>
 				</section>
 				<section>
 				<section>
 					<h3>Get Ready!</h3>
-					<p>Visit <br><a href ="http://lisawilliams.github.io/visual-thinking/">
-						http://lisawilliams.github.io/visual-thinking</a></p>
+					<p>Visit <br><a href ="http://lisawilliams.github.io/data-journalism-basics">
+						http://lisawilliams.github.io/data-journalism-basics</a></p>
 						<p>This is where you will find all the links and resources for today's talk.</p>
 				</section>
 
@@ -47,6 +49,25 @@
 	If you don't have an .edu address, the free trial is here: <a href="https://www.tableau.com/products/desktop/download">https://www.tableau.com/products/desktop/download</a>
 
 </section>
+</section>
+
+<section>
+	<section><h3>Dealing with Data</h3></section>
+	<section><h3>Download DB Browser for SQLite</h3></section>
+	<section><h3>Import Data</h3>
+	<p>Download this CSV File: <a href:"fire-incidents-boston.csv">fire-incidents-boston.csv</a></p></section>
+	<section><h3>A Little SQL</h3></section>
+	<section><p>SELECT * FROM `fire-incidents-boston` WHERE CitySection = "JP"</p></section>
+	<section><p>Select * FROM `fire-incidents-boston` WHERE CitySection = "JP" AND PropertyDescription = "Multifamily dwelling";
+</p></section>
+<section><p>SELECT * from `fire-incidents-boston` WHERE EstimatedPropertyLoss > "500" and CitySection = "JP" and PropertyDescription = "Multifamily dwelling"
+</p></section>
+<section><h5>Investigating Data Types</h5><p>Click Database Structure > click on table > Modify Table</section>
+<section><p>SELECT * from `fire-incidents-boston` ORDER BY EstimatedPropertyLoss DESC;
+</p></section>
+</section>
+
+
 </section>
 
 <section>
@@ -274,13 +295,13 @@
 								<h3> Questions?</h3> Reach Lisa Williams<br> lisatmh AT gmail dot com<br> @lisawilliams
 								<br>
 								<a href="http://tomlinson.org/resume">More on me and my work</a><br>
-								<a href="http://lisawilliams.github.io/visual-thinking">http://lisawilliams.github.io/visual-thinking</a>
+								<a href="http://lisawilliams.github.io/data-journalism-basics">http://lisawilliams.github.io/data-journalism-basics</a>
 							</section>
 							<section>
 				<h3>How this presentation was made </h3>
 				This presentation was made using Reveal.js, a framework for making HTML slide presentations; Reveal.js is a Node.js application.
 				For more details, visit the repository for this application at <a href ="https://github.com/lisawilliams/visual-thinking">https://github.com/lisawilliams/visual-thinking</a><br>
-				You can always find this presentation and its resources at <a href="http://lisawilliams.github.io/visual-thinking">http://lisawilliams.github.io/visual-thinking</a>
+				You can always find this presentation and its resources at <a href="http://lisawilliams.github.io/data-journalism-basics">http://lisawilliams.github.io/data-journalism-basics</a>
 
 							</section>
 						</section>
