adding download details for sqlite browser

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 				<section>
 				<section>
 					<h3>Get Ready!</h3>
-					<p>Visit <br><a href ="http://lisawilliams.github.io/data-journalism-basics">
-						http://lisawilliams.github.io/data-journalism-basics</a></p>
+					<p>Visit <br><a href ="http://lisawilliams.github.io/visual-thinking">
+						http://lisawilliams.github.io/visual-thinking</a></p>
 						<p>This is where you will find all the links and resources for today's talk.</p>
 				</section>
 
@@ -49,6 +49,9 @@
 	If you don't have an .edu address, the free trial is here: <a href="https://www.tableau.com/products/desktop/download">https://www.tableau.com/products/desktop/download</a>
 
 </section>
+<section><h3>Want to see some new stuff?</h3></section>
+<section><H3>Download SQLite Browser</H3>
+<p><a href ="http://sqlitebrowser.org/"</p></section>
 </section>
 
 <section>
