adding data download details

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <section>
 	<section><h3>Dealing with Data</h3></section>
 	<section><h3>Download DB Browser for SQLite</h3></section>
-	<section><h3>Import Data</h3>
-	<p>Download this CSV File: <a href:"fire-incidents-boston.csv">fire-incidents-boston.csv</a></p></section>
+	<section><h3>Grab some data</h3>
+	<p>Visit<a href:"https://data.boston.gov/dataset/fire-incident-reporting">Boston Fire Incident Reporting</a></p></section>
 	<section><h3>A Little SQL</h3></section>
 	<section><p>SELECT * FROM `fire-incidents-boston` WHERE CitySection = "JP"</p></section>
 	<section><p>Select * FROM `fire-incidents-boston` WHERE CitySection = "JP" AND PropertyDescription = "Multifamily dwelling";
