--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
 
 </section>
 <section><h3>Want to see some new stuff?</h3></section>
-<section><H3>Download SQLite Browser</H3>
-<p><a href ="http://sqlitebrowser.org/"</p></section>
+<section><H3>Download SQLite Browser</H3><p><a href ="http://sqlitebrowser.org/">http://sqlitebrowser.org</a></section>
 </section>
 
 <section>
 	<section><h3>Dealing with Data</h3></section>
-	<section><h3>Download DB Browser for SQLite</h3></section>
 	<section><h3>Grab some data</h3>
-	<p>Visit<a href:"https://data.boston.gov/dataset/fire-incident-reporting">Boston Fire Incident Reporting</a></p></section>
+	<p>Visit <a href="https://data.boston.gov/dataset/fire-incident-reporting">Boston Fire Incident Reporting</a></p></section>
 	<section><h3>A Little SQL</h3></section>
 	<section><p>SELECT * FROM `fire-incidents-boston` WHERE CitySection = "JP"</p></section>
 	<section><p>Select * FROM `fire-incidents-boston` WHERE CitySection = "JP" AND PropertyDescription = "Multifamily dwelling";
