--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 
 <section>
 	<section><h3>Dealing with Data</h3></section>
-	<section><h3>Grab some data</h3>
-	<p>Visit <a href="https://data.boston.gov/dataset/fire-incident-reporting">Boston Fire Incident Reporting</a></p></section>
+	<section><h3>Grab some data</h3><p>Visit <a href="https://data.boston.gov/dataset/fire-incident-reporting">Boston Fire Incident Reporting</a></p></section>
 	<section><h3>A Little SQL</h3></section>
 	<section><p>SELECT * FROM `fire-incidents-boston` WHERE CitySection = "JP"</p></section>
 	<section><p>Select * FROM `fire-incidents-boston` WHERE CitySection = "JP" AND PropertyDescription = "Multifamily dwelling";
